adicionei o componente cadastrar-alterar com o uso da diretiva ngModel e do materialize. Também adicionei o componente adicionar, que é um botão em que é usado o materialize. Foi mudado o convite, para que o convite seja alimentado através de data binding.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
 <app-search-textfield></app-search-textfield>
 <app-lista-convites></app-lista-convites>
+<app-adicionar></app-adicionar>
+
+<!--
+Essa é a página de cadastro ou modificação do convite
+<app-cadastrar-alterar></app-cadastrar-alterar>
+-->
