--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
+@import "~materialize-css/dist/css/materialize.css";
+@import "~material-icons/iconfont/material-icons.css";
+
 * {
   margin: 0;
   padding: 0;
-
 }
