adicionei componente inicio. Criei a classe Convite para guardar os dados dos convites e passar por parametros ele. Adicionadas rotas, mas precisa arrumar ele ainda.

--- a/src/app/convite/convite.component.html
+++ b/src/app/convite/convite.component.html
@@ -2,7 +2,7 @@
   <img class="convite-imagem" [src]="this.imagemSrc"/>
   <div class="convite-dados">
     <p class="convite-dado">{{this.titulo}}</p>
-    <p class="convite-dado">{{this.data.toLocaleDateString()}}</p>
+    <p class="convite-dado">{{this.data}}</p>
     <p class="convite-dado">{{this.preco}}</p>
   </div>
 </div>
