--- a/src/app/lista-convites/lista-convites.component.html
+++ b/src/app/lista-convites/lista-convites.component.html
@@ -1,5 +1,14 @@
 <div class="convite-lista">
-  <app-convite></app-convite>
-  <app-convite></app-convite>
-  <app-convite></app-convite>
+  <app-convite data = "30/09/2023"
+              imagemSrc="https://mid.curitiba.pr.gov.br/2019/capa/00283591.jpg"
+              preco="30.70"
+              titulo="Titulo 1"></app-convite>
+  <app-convite data = "30/09/2023"
+              imagemSrc="https://mid.curitiba.pr.gov.br/2019/capa/00283591.jpg"
+              preco="30.70"
+              titulo="Titulo 1"></app-convite>
+  <app-convite data = "30/09/2023"
+              imagemSrc="https://mid.curitiba.pr.gov.br/2019/capa/00283591.jpg"
+              preco="30.70"
+              titulo="Titulo 1"></app-convite>
 </div>
