--- a/src/app/adicionar/adicionar.component.html
+++ b/src/app/adicionar/adicionar.component.html
@@ -1,3 +1,3 @@
 <div class="botao-container">
-  <a class="btn-floating btn-large waves-effect waves-light red" (onclick)="this.clicado()"><i class="material-icons">add</i></a>
+  <button class="btn-floating btn-large waves-effect waves-light red" (onclick)="this.pressionar()"><i class="material-icons">add</i></button>
 </div>
