arrumadas as rotinas referentes a navegacao.

--- a/src/app/convite/convite.component.css
+++ b/src/app/convite/convite.component.css
@@ -1,6 +1,11 @@
 .convite-conteudo {
   display: flex;
   margin: 8px 16px;
+  width: 40%;
+}
+.convite-conteudo:hover {
+  border: 1px solid black;
+  cursor: pointer;
 }
 .convite-imagem{
   width: 30%;
