--- a/src/app/cadastrar-alterar/cadastrar-alterar.component.html
+++ b/src/app/cadastrar-alterar/cadastrar-alterar.component.html
@@ -6,22 +6,20 @@
   </div>
 </div>
 <div class="row">
-  <form class="col" action="#">
+  <form action="#">
     <div class="row">
-      <div class="input-field col">
-        <input placeholder="Placeholder" id="titulo_convite" name="titulo_convite" type="text" class="validate" [(ngModel)] = "this.tituloConvite">
+      <div class="input-field">
+        <input id="titulo_convite" name="titulo_convite" type="text" class="validate" [(ngModel)] = "this.tituloConvite">
         <label for="titulo_convite">Título da Festa</label>
       </div>
     </div>
     <div class="row">
-      <div class="file-field input-field col">
-        <div class="btn">
-          <span>Arquivo</span>
-          <input type="file" id="imagem_convite" name="imagem_convite">
-        </div>
-        <div class="file-path-wrapper">
-          <input class="file-path validate" name="imagem_url" type="text" [(ngModel)] = "this.imagemSrc">
-        </div>
+      <div class="input-field">
+        <input id="imagem_convite" name="imagem_convite" type="text" class="validate" [(ngModel)] = "this.imagemSrc">
+        <label for="imagem_convite">URL da imagem do convite</label>
+      </div>
+      <div>
+        <img [src] = "this.imagemSrc">
       </div>
     </div>
     <div class="row">
@@ -32,7 +30,7 @@
     </div>
     <div class="row">
       <div class="input-field col">
-        <input id="data_convite" name="data_convite" type="date" class="validate" [(ngModel)] = "this.data">
+        <input id="data_convite" name="data_convite" type="date" class="validate" [ngModel] = "this.data | date:'y-MM-dd'" (ngModelChange)="this.data = $event">
         <label for="data_convite">Data da festa</label>
       </div>
     </div>
@@ -42,6 +40,7 @@
         <label for="preco_convite">Preço da festa</label>
       </div>
     </div>
-    <app-adicionar></app-adicionar>
+    <app-adicionar (pressionado)="this.cadastrar()"></app-adicionar>
+    <button class="btn red" (click) = "this.voltar()">Voltar</button>
   </form>
 </div>
