resolvido o problema de invalid function.

--- a/src/app/lista-convites/lista-convites.component.html
+++ b/src/app/lista-convites/lista-convites.component.html
@@ -1,5 +1,6 @@
 <div class="convite-lista">
   <app-convite *ngFor="let convite of convites"
               [convite] = "convite"
-              (pressionado)="this.modificar(convite)"></app-convite>
+              (pressionado)="this.modificar(convite)"
+              (deletar)="this.deletar(convite)"></app-convite>
 </div>
