--- a/src/app/convite/convite.component.html
+++ b/src/app/convite/convite.component.html
@@ -1,9 +1,14 @@
+<div class="lado">
 <div class="convite-conteudo" (click)="this.clicar()">
-  <img class="convite-imagem" [src]="this.imagemSrc"/>
-  <!-- <div class="convite-dados">
-    <p class="convite-dado">{{this.titulo}}</p>
-    <p class="convite-dado">{{this.data ? this.data.toLocaleDateString('pt-BR') : ''}}</p>
-    <p class="convite-dado">{{this.preco}}</p>
-    <p class="convite-dado">{{this.local}}</p>
-  </div> -->
+  <img class="convite-imagem" [src]="this.convite.imagemSrc"/>
+  <div class="convite-dados">
+    <p class="convite-dado">{{this.convite.titulo}}</p>
+    <p class="convite-dado">{{this.convite.data}}</p>
+    <p class="convite-dado">{{this.convite.preco}}</p>
+    <p class="convite-dado">{{this.convite.local}}</p>
+  </div>
+</div>
+<div>
+  <button class="btn-floating btn-large waves-effect waves-light red" type="button" (click)="this.clicouDeletar(this.convite)"><i class="material-icons">remove</i></button>
+</div>
 </div>
