usei pipes para formatar a data e preco.

--- a/src/app/convite/convite.component.html
+++ b/src/app/convite/convite.component.html
@@ -3,8 +3,8 @@
   <img class="convite-imagem" [src]="this.convite.imagemSrc"/>
   <div class="convite-dados">
     <p class="convite-dado">{{this.convite.titulo}}</p>
-    <p class="convite-dado">{{this.convite.data}}</p>
-    <p class="convite-dado">{{this.convite.preco}}</p>
+    <p class="convite-dado">{{this.convite.data | date: 'shortDate'}}</p>
+    <p class="convite-dado">{{this.convite.preco.toString() | currency: 'BRL'}}</p>
     <p class="convite-dado">{{this.convite.local}}</p>
   </div>
 </div>
