arrumei o pattern para persistir somente quando todos os campos estiverem preenchidos.

--- a/src/app/adicionar/adicionar.component.html
+++ b/src/app/adicionar/adicionar.component.html
@@ -1,3 +1,3 @@
 <div class="botao-container">
-  <button class="btn-floating btn-large waves-effect waves-light red" type="button" (click)="this.pressionar()"><i class="material-icons">add</i></button>
+  <button class="btn-floating btn-large waves-effect waves-light red" type="button" (click)="this.pressionar()" [disabled] = "this.desativado"><i class="material-icons">add</i></button>
 </div>
